# SpaceFighter

./: .clang-format  .clangd  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example01.cpp
include/: Game.h  Object.h  Scene.h  SceneEnd.h  SceneMain.h  SceneTitle.h
lib/: CMakeLists.txt  Game.cpp  Scene.cpp  SceneEnd.cpp  SceneMain.cpp
src/: CMakeLists.txt  main.cpp
src/core/impl/: SceneTitle.cpp
src/core/include/: Object.h  Scene.h  SceneMain.h
test/: CMakeLists.txt  test01.cpp
